# hands-on-lab-agent-framework-on-azure

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: workshop.md
infra/: foundry_models.tf  managed_redis.tf
solutions/: lab_1.py  lab_2.py  lab_3.py  lab_4.py  lab_5.py  lab_6.py  lab_7.py
src/: .env.template  README.md  api.py  config.py  create_data.py  lab_1.py  lab_2.py  lab_4.py  lab_5.py  lab_6.py  lab_7.py  lab_8.py  main.py  phase_1_setup.py  pyproject.toml  sentry-jira-agent-plan.md  sentry_jira_agent.py
src/agents/: README.md  __init__.py  postman_collection.json  sentry_jira_multi_agent.py  server.py
src/files/: contoso-github-issues-guidelines.md
src/models/: issue_analyzer.py
